--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind variants;
 
 html,
 body {
@@ -17,4 +18,28 @@ a {
 
 * {
 	box-sizing: border-box;
+}
+
+@layer base {
+	h1 {
+		@apply text-2xl;
+	}
+	h2 {
+		@apply text-xl;
+	}
+	.wrapper {
+		@apply mx-auto w-full sm:max-w-2xl md:max-w-3xl px-4;
+	}
+	.category-title {
+		@apply text-3xl md:text-4xl font-bold mb-4;
+	}
+	.category-desc {
+		@apply text-gray-500 text-sm md:text-base;
+	}
+}
+
+@layer components {
+	.btn-blue {
+		@apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+	}
 }
