--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,9 @@ a {
 	.wrapper {
 		@apply mx-auto w-full sm:max-w-2xl md:max-w-3xl px-4;
 	}
+	.category-header {
+		@apply pt-12 pb-6;
+	}
 	.category-title {
 		@apply text-3xl md:text-4xl font-bold mb-4;
 	}
