--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,24 +3,6 @@
 @tailwind utilities;
 @tailwind variants;
 
-html,
-body {
-	padding: 0;
-	margin: 0;
-	font-family: -apple-system, Nanum Gothic, BlinkMacSystemFont, Segoe UI,
-		Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-		sans-serif;
-}
-
-a {
-	color: inherit;
-	text-decoration: none;
-}
-
-* {
-	box-sizing: border-box;
-}
-
 @layer base {
 	h1 {
 		@apply text-2xl;
@@ -44,10 +26,10 @@ a {
 		@apply dark:bg-slate-900 dark:text-slate-400;
 	}
 	.about-title {
-		@apply mb-5 underline decoration-4 decoration-indigo-500 dark:decoration-yellow-200;
+		@apply mb-5 underline decoration-4 decoration-indigo-500/50 dark:decoration-yellow-200/50;
 	}
 	article {
-		@apply mb-8 md:flex border-4 border-indigo-500 dark:border-yellow-200 bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800;
+		@apply mb-8 md:flex border-4 border-indigo-500/50 dark:border-yellow-200/50 bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800;
 	}
 	article .content {
 		@apply md:p-6 text-center md:text-left space-y-4;
@@ -57,5 +39,319 @@ a {
 @layer components {
 	.btn-blue {
 		@apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+	}
+}
+
+html,
+body {
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, Nanum Gothic, BlinkMacSystemFont, Segoe UI,
+		Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+		sans-serif;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+#hide-checkbox {
+	opacity: 0;
+	height: 0;
+	width: 0;
+}
+
+.toggle {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	cursor: pointer;
+	display: inline-block;
+	width: 50px;
+	height: 25px;
+	background: #211042;
+	border-radius: 50px;
+	transition: 500ms;
+	overflow: hidden;
+}
+
+.toggle-button {
+	position: absolute;
+	display: inline-block;
+	top: 1.75px;
+	left: 1.5px;
+	width: 21.5px;
+	height: 21.5px;
+	border-radius: 50%;
+	background: #faeaf1;
+	overflow: hidden;
+	box-shadow: 0 0 35px 4px rgba(255, 255, 255);
+	transition: all 500ms ease-out;
+}
+
+.crater {
+	position: absolute;
+	display: inline-block;
+	background: #faeaf1;
+	border-radius: 50%;
+	transition: 500ms;
+}
+
+.crater-1 {
+	background: #fffff9;
+	width: 21.5px;
+	height: 21.5px;
+	left: 2.5px;
+	bottom: 2.5px;
+}
+
+.crater-2 {
+	width: 5px;
+	height: 5px;
+	top: -1.75px;
+	left: 11px;
+}
+
+.crater-3 {
+	width: 4px;
+	height: 4px;
+	top: 5px;
+	right: -1px;
+}
+
+.crater-4 {
+	width: 2.5px;
+	height: 2.5px;
+	top: 6px;
+	left: 7.5px;
+}
+
+.crater-5 {
+	width: 3.75px;
+	height: 3.75px;
+	top: 10px;
+	left: 12px;
+}
+
+.crater-6 {
+	width: 2.5px;
+	height: 2.5px;
+	top: 12px;
+	left: 5px;
+}
+
+.crater-7 {
+	width: 3px;
+	height: 3px;
+	bottom: 1.25px;
+	left: 8.75px;
+}
+
+.star {
+	position: absolute;
+	display: inline-block;
+	border-radius: 50%;
+	background: #fff;
+	box-shadow: 0.5px 0 1px 1px rgba(255, 255, 255);
+}
+
+.star-1 {
+	width: 1.5px;
+	height: 1.5px;
+	right: 22.5px;
+	bottom: 10px;
+}
+
+.star-2 {
+	width: 2px;
+	height: 2px;
+	right: 17.5px;
+	top: 2.5px;
+}
+
+.star-3 {
+	width: 1.25px;
+	height: 1.25px;
+	right: 15px;
+	bottom: 3.75px;
+}
+
+.star-4 {
+	width: 0.75px;
+	height: 0.75px;
+	right: 10px;
+	bottom: 12.5px;
+}
+
+.star-5 {
+	width: 1px;
+	height: 1px;
+	right: 2.5px;
+	bottom: 8.75px;
+}
+
+.star-6,
+.star-7,
+.star-8 {
+	width: 2.5px;
+	height: 0.5px;
+	border-radius: 2px;
+	transform: rotate(-45deg);
+	box-shadow: 5px 0px 4px 1px #fff;
+	animation-name: travel;
+	animation-duration: 1.5s;
+	animation-timing-function: ease-out;
+	animation-iteration-count: infinite;
+}
+
+.star-6 {
+	right: 7.5px;
+	bottom: 7.5px;
+	animation-delay: -2s;
+}
+
+.star-7 {
+	right: 12.5px;
+	bottom: 15px;
+}
+
+.star-8 {
+	right: 22.5px;
+	top: 2.5px;
+	animation-delay: -4s;
+}
+
+@keyframes travel {
+	0% {
+		transform: rotate(-45deg) translateX(60px);
+	}
+
+	50% {
+		transform: rotate(-45deg) translateX(-20px);
+		box-shadow: 5px 0px 6px 1px #fff;
+	}
+
+	100% {
+		transform: rotate(-45deg) translateX(-30px);
+		width: 2px;
+		height: 2px;
+		opacity: 0;
+		box-shadow: none;
+	}
+}
+
+#hide-checkbox:checked + .toggle {
+	background: #24d7f7;
+}
+
+#hide-checkbox:checked + .toggle .toggle-button {
+	background: #f7ffff;
+	transform: translateX(25.5px);
+	box-shadow: 0 0 35px 5px rgba(255, 255, 255);
+}
+
+#hide-checkbox:checked + .toggle .toggle-button .crater {
+	transform: rotate(-45deg) translateX(17.5px);
+}
+
+#hide-checkbox:checked + .toggle .star {
+	animation: move 2s infinite;
+	transform: none;
+	box-shadow: none;
+}
+
+#hide-checkbox:checked + .toggle .star-1 {
+	width: 10px;
+	height: 2.5px;
+	border-radius: 10px;
+	background: #fff;
+	left: 5px;
+	top: 6.25px;
+	box-shadow: none;
+}
+
+#hide-checkbox:checked + .toggle .star-2 {
+	width: 3px;
+	height: 3px;
+	background: #fff;
+	left: 6.5px;
+	top: 5.75px;
+	box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+#hide-checkbox:checked + .toggle .star-3 {
+	width: 4px;
+	height: 4px;
+	background: #fff;
+	left: 8.75px;
+	top: 4.75px;
+	box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+#hide-checkbox:checked + .toggle .star-4 {
+	width: 3.5px;
+	height: 3.5px;
+	background: #fff;
+	left: 11.5px;
+	top: 5.25px;
+	box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+#hide-checkbox:checked + .toggle .star-5 {
+	width: 15px;
+	height: 3.75px;
+	border-radius: 15px;
+	background: #fff;
+	left: 7.5px;
+	bottom: 5px;
+	box-shadow: none;
+}
+
+#hide-checkbox:checked + .toggle .star-6 {
+	width: 4.5px;
+	height: 4.5px;
+	background: #fff;
+	border-radius: 50%;
+	left: 9.5px;
+	bottom: 5px;
+	box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+#hide-checkbox:checked + .toggle .star-7 {
+	width: 6px;
+	height: 6px;
+	background: #fff;
+	border-radius: 50%;
+	left: 13px;
+	bottom: 5px;
+	box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+#hide-checkbox:checked + .toggle .star-8 {
+	width: 5.25px;
+	height: 5.25px;
+	background: #fff;
+	border-radius: 50%;
+	left: 17.5px;
+	top: 14.75px;
+	box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+@keyframes move {
+	0% {
+		transform: none;
+	}
+
+	25% {
+		transform: translateX(2px);
+	}
+
+	100% {
+		transform: translateX(-2px);
 	}
 }
