--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,9 @@
   .about-title {
     @apply mb-5 underline decoration-4 decoration-indigo-500/50 dark:decoration-yellow-200/50;
   }
+  .footer {
+    @apply flex items-center justify-center w-full h-24;
+  }
   article {
     @apply mb-8 md:flex border-4 border-indigo-500/50 dark:border-yellow-200/50 bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800;
   }
